@@ -1,3 +1,6 @@
+2001-03-07  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
+	* Audio.cc/h: added a config/audio/enabled switch to kill all audio.
+
 2001-03-04  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* schedule.cc (Lab_schedule): Implemented.
